crates/views/re_view_spatial/tests/snapshots/spawn_heuristics__should_be_two_separate_views_because_we_cant_stack_color_images.snap
---
source: crates/views/re_view_spatial/tests/spawn_heuristics.rs
expression: recommended_views
---
RecommendedViews {
    views_2d: Some(
        ViewSpawnHeuristics {
            recommended_views: [
                RecommendedView {
                    origin: /image/a,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
                RecommendedView {
                    origin: /image/b,
                    query_filter: [
                        "+ $origin/**",
                    ],
                },
            ],
        },
    ),
    views_3d: Some(
        ViewSpawnHeuristics {
            recommended_views: [],
        },
    ),
}
